--- a/1/alpine/Dockerfile
+++ b/1/alpine/Dockerfile
@@ -14,7 +14,9 @@ ENV NPM_CONFIG_LOGLEVEL warn
 ENV NODE_ENV production
 ENV GHOST_CLI_VERSION 1.1.1
 ENV GHOST_VERSION 1.7.1
-ENV DB_PASS default
+ENV DB sqlite3
+ENV DB_HOST mysql
+ENV DB_PASS password
 ENV GHOST_URL http://localhost:2368
 
 RUN npm install -g "ghost-cli@$GHOST_CLI_VERSION" knex-migrator@latest
@@ -30,7 +32,7 @@ RUN set -ex; \
 	\
 # Tell Ghost to listen on all ips and not prompt for additional configuration
 	cd "$GHOST_INSTALL"; \
-	su-exec node ghost config --ip 0.0.0.0 --port 2368 --no-prompt --db mysql --dbhost mariadb --dbuser ghost --dbpass "$DB_PASS" --dbname ghost_production --url "$GHOST_URL" ; \
+	su-exec node ghost config --ip 0.0.0.0 --port 2368 --no-prompt --db "$DB" --dbhost "$DB_HOST" --dbuser ghost --dbpass "$DB_PASS" --dbname ghost_production --url "$GHOST_URL" ; \
 	su-exec node ghost config paths.contentPath "$GHOST_CONTENT"; \
 	\
 # need to save initial content for pre-seeding empty volumes
