--- a/1/alpine/Dockerfile
+++ b/1/alpine/Dockerfile
@@ -16,7 +16,9 @@ ENV GHOST_CLI_VERSION 1.1.1
 ENV GHOST_VERSION 1.7.1
 ENV DB sqlite3
 ENV DB_HOST mysql
+ENV DB_NAME ghost_production
 ENV DB_PASS password
+ENV DB_USER ghost
 ENV GHOST_URL http://localhost:2368
 
 RUN npm install -g "ghost-cli@$GHOST_CLI_VERSION" knex-migrator@latest
@@ -28,11 +30,11 @@ RUN set -ex; \
 	mkdir -p "$GHOST_INSTALL"; \
 	chown node:node "$GHOST_INSTALL"; \
 	\
-	su-exec node ghost install "$GHOST_VERSION" --db sqlite3 --no-prompt --no-stack --no-setup --dir "$GHOST_INSTALL"; \
+	su-exec node ghost install "$GHOST_VERSION" --db "$DB" --no-prompt --no-stack --no-setup --dir "$GHOST_INSTALL"; \
 	\
 # Tell Ghost to listen on all ips and not prompt for additional configuration
 	cd "$GHOST_INSTALL"; \
-	su-exec node ghost config --ip 0.0.0.0 --port 2368 --no-prompt --db "$DB" --dbhost "$DB_HOST" --dbuser ghost --dbpass "$DB_PASS" --dbname ghost_production --url "$GHOST_URL" ; \
+	su-exec node ghost config --ip 0.0.0.0 --port 2368 --no-prompt --db "$DB" --dbhost "$DB_HOST" --dbuser "$DB_USER" --dbpass "$DB_PASS" --dbname "$DB_NAME" --url "$GHOST_URL" ; \
 	su-exec node ghost config paths.contentPath "$GHOST_CONTENT"; \
 	\
 # need to save initial content for pre-seeding empty volumes
